--- a/README.Rmd
+++ b/README.Rmd
@@ -1,10 +1,13 @@
 ---
 title: Introducing the polmineR package
 output: github_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
+[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3909433.svg)](https://doi.org/10.5281/zenodo.3909433)
 [![License: GPL v3](https://img.shields.io/badge/License-GPLv3-blue.svg)](https://www.gnu.org/licenses/gpl-3.0)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/polmineR)](https://cran.r-project.org/package=polmineR)
 [![Downloads](http://cranlogs.r-pkg.org/badges/polmineR)](https://cran.r-project.org/package=polmineR)
@@ -327,3 +330,10 @@ Now install the remaining packages from within R.
 ```{r install_dependencies, eval = FALSE}
 install.packages(pkgs = c("rJava", "xlsx", "tidytext"))
 ```
+
+## Quoting polmineR
+
+The polmineR package has been developed to be useful for research. If you publish research results making use of polmineR, the following citation is suggested to be included in publications.
+
+Blaette, Andreas (2020). polmineR: Verbs and Nouns for Corpus Analysis. R package version
+  v0.8.1. http://doi.org/10.5281/zenodo.3909433
