--- a/README.Rmd
+++ b/README.Rmd
@@ -287,7 +287,7 @@ The RcppCWB package, the interface used by polmineR to query CWB corpora, will r
 ```{sh linux_install_system_requirements,  eval = FALSE}
 sudo apt-get install libglib2.0-dev libssl-dev libcurl4-openssl-dev
 sudo apt-get install libxml2-dev
-sudo apt-get install libprotobuf-dev
+sudo apt-get install libprotobuf-dev protobuf-compiler
 ```
 
 The system requirements will now be fulfilled. From R, install dependencies for rcqp/polmineR first, and then rcqp and polmineR.
