--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -21,15 +21,15 @@ The purpose of the package *polmineR* is to offer a toolset for the interactive 
 
 * To make the creation and analysis of subcorpora ('partitions') as easy as possible. A particular strength of the package is to support research on synchronic and diachronic change of language use.
 
-* To offer performance for users with a standard infrastructure. The package is developed based on the idea of a three-tier software design. Corpus data are managed and indexed using the [Corpus Workbench (CWB)](http://cwb.sourceforge.net/), which serves as a backend.
+* To offer performance for users with a standard infrastructure. The package is developed based on the idea of a three-tier software design. Corpus data are managed and indexed using the [Corpus Workbench (CWB)](https://cwb.sourceforge.io/), which serves as a backend.
 
 * To support sharing consolidated and documented data, following the ideas of reproducible research.
 
-The *polmineR* package supplements R packages that are already widely used for text mining. The [CRAN NLP task view](https://CRAN.R-project.org/view=NaturalLanguageProcessing) is a good place to learn about relevant packages. The *polmineR* package is intended to be an interface between the [Corpus Workbench (CWB)](http://cwb.sourceforge.net/), an efficient system for storing and querying large corpora, and existing packages for text mining and text statistics.
+The *polmineR* package supplements R packages that are already widely used for text mining. The [CRAN NLP task view](https://CRAN.R-project.org/view=NaturalLanguageProcessing) is a good place to learn about relevant packages. The *polmineR* package is intended to be an interface between the [Corpus Workbench (CWB)](https://cwb.sourceforge.io/), an efficient system for storing and querying large corpora, and existing packages for text mining and text statistics.
 
-Apart from the speed of text processing, the Corpus Query Processor (CQP) and the [CQP syntax](http://cwb.sourceforge.net/files/CQP_Tutorial.pdf) provide a powerful and widely used syntax to query corpora. This is not an unique idea. Using a combination of R and the CWB implies a software architecture you will also find in the [TXM project](https://sourceforge.net/projects/txm/), or with [CQPweb](http://cwb.sourceforge.net/cqpweb.php). The *polmineR* package offers a library with the grammer of corpus analysis below a graphical user interface (GUI). It is a toolset to perform simple tasts efficiently as well as to implement complex workflows.
+Apart from the speed of text processing, the Corpus Query Processor (CQP) and the [CQP syntax](https://cwb.sourceforge.io/files/CQP_Tutorial.pdf) provide a powerful and widely used syntax to query corpora. This is not an unique idea. Using a combination of R and the CWB implies a software architecture you will also find in the [TXM project](https://sourceforge.net/projects/txm/), or with [CQPweb](https://cwb.sourceforge.io/cqpweb.php). The *polmineR* package offers a library with the grammer of corpus analysis below a graphical user interface (GUI). It is a toolset to perform simple tasts efficiently as well as to implement complex workflows.
 
-Advanced users will benefit from acquiring a good understanding of the Corpus Workbench. The [Corpus Encoding Tutorial](http://cwb.sourceforge.net/files/CWB_Encoding_Tutorial.pdf) is an authoritative text for that. [The vignette of the rcqp package](https://cran.r-project.org/src/contrib/Archive/rcqp/), albeit archived, includes an excellent explanation of the CWB data-model. The inferface used now to use CWB/CQP functionality is the [RcppCWB package](https://CRAN.R-project.org/package=RcppCWB).
+Advanced users will benefit from acquiring a good understanding of the Corpus Workbench. The [Corpus Encoding Tutorial](https://cwb.sourceforge.io/files/CWB_Encoding_Tutorial.pdf) is an authoritative text for that. [The vignette of the rcqp package](https://cran.r-project.org/src/contrib/Archive/rcqp/), albeit archived, includes an excellent explanation of the CWB data-model. The inferface used now to use CWB/CQP functionality is the [RcppCWB package](https://CRAN.R-project.org/package=RcppCWB).
 
 A basic issue to understand is the difference between *s*- and *p*-attributes. The CWB distinguishes structural attributes (s-attributes) that will contain the metainformation that can be used to generate subcorpora/partitions, and positional attributes (p-attributes).  Typically, the p-attributes will be 'word', 'pos' (for part-of-speech) and 'lemma' (for the lemmatized word form). 
 
@@ -141,7 +141,7 @@ You can also use the CQP query syntax for formulating queries. That way, you can
 k <- kwic("REUTERS", '"oil" "price.*"')
 ```
 
-Explaining the CQP syntax goes beyon this vignette. Consult the [CQP tutorial](http://cwb.sourceforge.net/files/CQP_Tutorial.pdf) to learn more about the CQP syntax.
+Explaining the CQP syntax goes beyon this vignette. Consult the [CQP tutorial](https://cwb.sourceforge.io/files/CQP_Tutorial.pdf) to learn more about the CQP syntax.
 
 
 ### Getting counts and frequencies
