--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -44,23 +44,41 @@ The *polmineR* package is loaded just like any other package.
 library(polmineR)
 ```
 
-Upon loading the package, the package version is reported. As *polmineR* is under active development, please check whether a more recent version is available at CRAN. Development versions are available at GitHub.
+Upon loading the package, the package version is reported. As *polmineR* is
+under active development, please check whether a more recent version is
+available at CRAN. Development versions are available at GitHub.
 
-In addition, you will see an information on the *session registry*, which needs some further explanation.
+In addition, you will see an information on the *session registry*, which needs
+some further explanation.
 
 ### The session registry directory
 
-Indexed corpus data may be stored at different locations on your machine. CWB users will usually have a data directory with subdirectories for every single corpus. But corpus data may also reside within R packages, or anywhere else.
+Indexed corpus data may be stored at different locations on your machine. CWB
+users will usually have a data directory with subdirectories for every single
+corpus. But corpus data may also reside within R packages, or anywhere else.
 
-It is not necessary to move indexed corpora to one single location. The only recommendation is to have them on a device that can be accessed sufficiently fast. Corpora are not fully loaded into memory, but information is retrieved from disk on a 'on demand'-basis. Thus, storing corpus data on a SSD may be faster than a hard drive.
+It is not necessary to move indexed corpora to one single location. The only
+recommendation is to have them on a device that can be accessed sufficiently
+fast. Corpora are not fully loaded into memory, but information is retrieved
+from disk on a 'on demand'-basis. Thus, storing corpus data on a SSD may be
+faster than a hard drive.
 
-The CWB will look up information on the corpora in a directory called *registry* that is defined by the environment variable CORPUS_REGISTRY. Starting with version v0.7.9, the *polmineR* package creates a temporary registry directory in the temporary session directory. To get the path of the session registry directory, call `registry()`. The output is the session registry you have seen when loading *polmineR*.
+The CWB will look up information on the corpora in a directory called *registry*
+that is defined by the environment variable CORPUS_REGISTRY. Starting with
+version v0.7.9, the *polmineR* package creates a temporary registry directory in
+the temporary session directory. To get the path of the session registry
+directory, call `registry()`. The output is the session registry you have seen
+when loading *polmineR*.
 
 ```{r get_registry}
 registry()
 ```
 
-The session registry directory combines the registry files describing the corpora *polmineR* knows about. Upon loading *polmineR*, the files in the registry directory defined by the environment variable CORPUS_REGISTRY are copied to the session registry directory. To see whether the environment variable CORPUS_REGISTRY is set, use the `Sys.getenv()`-function. 
+The session registry directory combines the registry files describing the
+corpora *polmineR* knows about. Upon loading *polmineR*, the files in the
+registry directory defined by the environment variable CORPUS_REGISTRY are
+copied to the session registry directory. To see whether the environment
+variable CORPUS_REGISTRY is set, use the `Sys.getenv()`-function.
 
 ```{r, eval = FALSE}
 Sys.getenv("CORPUS_REGISTRY")
